frontend/style.scss
$base-background-color: #354152;
$base-color: #7e8ba3;
$error-background-color: lightpink;
$error-font-color: firebrick;
$instructions-background-color: #fdca40;
$instruction-font-color: #000;
$login-register-color: #2E8B57;
$login-register-font-color: #fff;

$base-font-weight: 300;
$base-font-size: 1rem;
$base-line-height: 1.5;
$base-font-family: Helvetica;
$base-font-family-fallback: sans-serif;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
body {
  background-color: $base-background-color;
  color: $base-color;
  font: $base-font-weight #{$base-font-size}/#{$base-line-height} $base-font-family, $base-font-family-fallback;
  min-height: 100vh;
}

// Login/Register Form

.login-register-form {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
}
.login-wrapper {
  position: relative;
  width: 420px;
  height: 450px;
  background: $login-register-color;
  border-radius: 10px;
  color: $login-register-font-color;
  display: flex;
  align-items: center;
  overflow: hidden;
  transition: height .2s ease;
}
.login-wrapper.active {
  height: 540px;
}
.login-wrapper .form-box {
  width: 100%;
  padding: 40px;
}
.login-wrapper .form-box.login {
  transition: translate .18s ease;
  translate: 0;
}
.login-wrapper.active .form-box.login {
  transition: none;
  translate: 420px;
}
.login-wrapper .form-box.register {
  position: absolute;
  transition: none;
  translate: -420px;
}
.login-wrapper.active .form-box.register {
  transition: translate .18s ease;
  translate: 0;
}
form h1 {
  font-size: 36px;
  text-align: center;
}
form .input-box {
  position: relative;
  width: 100%;
  height: 50px;
  margin: 30px 0;
}
.input-box input {
  width: 100%;
  height: 100%;
  background: transparent;
  outline: none;
  border: 2px solid rgba(255, 255, 255, .1);
  border-radius: 40px;
  font-size: 16px;
  color: $login-register-font-color;
  padding: 20px 45px 20px 20px;
}
.input-box input::placeholder {
  color: $login-register-font-color;
}
.input-box .icon {
  position: absolute;
  right: 20px;
  top: 50%;
  translate: 0 -50%;
  font-size: 16px;
}
form .form-options {
  display: flex;
  justify-content: space-between;
  font-size: 14.5px;
  margin: -15px 0 15px;
}
.form-options label input {
  accent-color: $login-register-font-color;
  margin-right: 4px;
}
.form-options a {
  color: $login-register-font-color;
  text-decoration: none;
}
.form-options a:hover {
  text-decoration: underline;
}
form button {
  width: 100%;
  height: 45px;
  background: $login-register-font-color;
  border: none;
  outline: none;
  border-radius: 40px;
  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
  cursor: pointer;
  font-size: 16px;
  color: #333;
  font-weight: 700;
}
form .register {
  font-size: 14.5px;
  text-align: center;
  margin: 20px 0 15px;
}
form p.message {
  font-size: 14.5px;
  text-align: center;
  color: $login-register-font-color;
  text-decoration: none;
  font-weight: 600;
}
form p.message a {
  color: $login-register-font-color;
  text-decoration: none;
}
form p.message a:hover {
  text-decoration: underline;
}
.register p a {
  color: $login-register-font-color;
  text-decoration: none;
  font-weight: 600;
}
.register p a:hover {
  text-decoration: underline;
}
.instructions {
  font-size: 0.75rem;
  border-radius: 10px;
  background: $instructions-background-color;
  color: $instruction-font-color;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
  position: relative;
  text-align: left;
}
.offscreen {
  display: none;
}
.hide {
  display: none;
}
.errmsg {
  background-color: $error-background-color;
  border-radius: 10px;
  color: $error-font-color;
  font-weight: bold;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
}

// Grid

.grid-container {
  display: grid;
  grid-template-columns: 12fr;
  grid-template-areas: "header" "navbar" "content" "footer";
}
.grid-item {
  border: 1px solid #ddd;
  font-size: 1.5rem;
  text-align: center;
}
.navbar {
  grid-area: navbar;
}
.header {
  grid-area: header;
}
.content {
  grid-area: content;
}
.footer {
  grid-area: footer;
}
.grid-content-3 {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 1rem;
  padding: 1rem;
}
.grid-content-4 {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 1rem;
  padding: 1rem;
}
@media screen and (max-width: 1700px) {
  .grid-content-3 {
    grid-template-columns: 1fr 1fr 1fr;
  }
  .grid-content-4 {
    grid-template-columns: 1fr 1fr 1fr;
  }
}
@media screen and (max-width: 1300px) {
  .grid-content-3 {
    grid-template-columns: 1fr 1fr;
  }
  .grid-content-4 {
    grid-template-columns: 1fr 1fr;
  }
}
@media screen and (max-width: 960px) {
  .grid-container {
    grid-template-columns: 1fr;
    grid-template-areas:
"header"
"navbar"
"content"
"footer";
  }
  .grid-content-3 {
    grid-template-columns: 1fr;
  }
  .grid-content-4 {
    grid-template-columns: 1fr;
  }
  .content {
    min-height: auto;
  }
}

// Header
.header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: #1b2430;
  height: 50px;
  width: 100%;
  padding: 0 20px;
}
.logo {
  color: white;
  font-size: 1.5rem;
}
.right-section {
  display: flex;
  align-items: center;
}
.profile-icon {
  color: white;
  font-size: 1.5rem;
}
.profile-icon span {
  margin-left: 5px;
  font-size: 1rem;
}

// Navbar
.navbar {
  background: #1b2430;
  height: 50px;
  display: grid;
  place-items: center;
}
.navigation ul {
  list-style: none;
  margin: 0;
  padding: 0;
}
.navigation li {
  display: inline-block;
  margin: 0 10px;
}
.navigation a {
  display: block;
  position: relative;
  text-decoration: none;
  color: #ddd;
}
.navigation--inline ul {
  display: flex;
}
.navigation-icon {
  block-size: 1em;
  display: inline-block;
  inline-size: 1em;
  vertical-align: middle;
}
.navigation span {
  font-size: 1rem;
  margin-left: 5px;
}
@media screen and (max-width: 960px) {
  .navigation span {
    display: none;
  }
}

// Content
.content {
  min-height: calc(100vh - 230px);
}

// Footer
.footer {
  background: #1b2430;
  height: 100px;
}

